Modernize karaf-plugin's use of URL
Go through URI to construct URLs.

Change-Id: I475a11b854fc6006877a39cfabb6f63698ee4ef4
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>