@@ -11,6 +11,8 @@ import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -19,8 +21,6 @@ import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.regex.Pattern;
-import org.apache.karaf.features.BundleInfo;
-import org.apache.karaf.features.Conditional;
 import org.apache.karaf.features.internal.model.Bundle;
 import org.apache.karaf.features.internal.model.ConfigFile;
 import org.apache.karaf.features.internal.model.Feature;
@@ -94,14 +94,16 @@ public final class FeatureUtil {
     /**
      * Parses the given repository as URLs and converts them to artifact coordinates.
      *
-     * @param repository The repository (list of URLs).
-     * @return The corresponding artifact coordinates.
-     * @throws MalformedURLException if a URL is malformed.
+     * @param repository The repository (list of URLs)
+     * @return The corresponding artifact coordinates
+     * @throws MalformedURLException if a URL cannot be used
+     * @throws URISyntaxException if a URL is malformed
      */
-    public static Set<String> mvnUrlsToCoord(final List<String> repository) throws MalformedURLException {
-        Set<String> result = new LinkedHashSet<>();
-        for (String url : repository) {
-            result.add(toCoord(new URL(url)));
+    public static Set<String> mvnUrlsToCoord(final List<String> repository)
+            throws MalformedURLException, URISyntaxException {
+        final var result = new LinkedHashSet<String>();
+        for (var url : repository) {
+            result.add(toCoord(new URI(url).toURL()));
         }
         LOG.trace("mvnUrlsToCoord({}) returns {}", repository, result);
         return result;
@@ -112,9 +114,11 @@ public final class FeatureUtil {
      *
      * @param features The features.
      * @return The corresponding artifact coordinates.
-     * @throws MalformedURLException if a URL is malformed.
+     * @throws MalformedURLException if a URL cannot be used
+     * @throws URISyntaxException if a URL is malformed
      */
-    public static Set<String> featuresRepositoryToCoords(final Features features) throws MalformedURLException {
+    public static Set<String> featuresRepositoryToCoords(final Features features)
+            throws MalformedURLException, URISyntaxException {
         return mvnUrlsToCoord(features.getRepository());
     }
 
@@ -123,11 +127,13 @@ public final class FeatureUtil {
      *
      * @param features The features.
      * @return The corresponding artifact coordinates.
-     * @throws MalformedURLException if a URL is malformed.
+     * @throws MalformedURLException if a URL cannot be used
+     * @throws URISyntaxException if a URL is malformed
      */
-    public static Set<String> featuresRepositoryToCoords(final Set<Features> features) throws MalformedURLException {
-        Set<String> result = new LinkedHashSet<>();
-        for (Features feature : features) {
+    public static Set<String> featuresRepositoryToCoords(final Set<Features> features)
+            throws MalformedURLException, URISyntaxException {
+        final var result = new LinkedHashSet<String>();
+        for (var feature : features) {
             result.addAll(featuresRepositoryToCoords(feature));
         }
         LOG.trace("featuresRepositoryToCoords({}) returns {}", features, result);
@@ -139,25 +145,30 @@ public final class FeatureUtil {
      *
      * @param feature The feature.
      * @return The corresponding coordinates.
-     * @throws MalformedURLException if a URL is malformed.
+     * @throws MalformedURLException if a URL cannot be used
+     * @throws URISyntaxException if a URL is malformed
      */
-    public static Set<String> featureToCoords(final Feature feature) throws MalformedURLException {
-        Set<String> result = new LinkedHashSet<>();
-        if (feature.getBundle() != null) {
-            result.addAll(bundlesToCoords(feature.getBundle()));
+    public static Set<String> featureToCoords(final Feature feature) throws MalformedURLException, URISyntaxException {
+        final var result = new LinkedHashSet<String>();
+        final var bundle = feature.getBundle();
+        if (bundle != null) {
+            result.addAll(bundlesToCoords(bundle));
         }
-        if (feature.getConditional() != null) {
-            for (Conditional conditional : feature.getConditional()) {
-                if (conditional.getBundles() != null) {
-                    for (BundleInfo bundleInfo : conditional.getBundles()) {
-                        result.add(toCoord(new URL(bundleInfo.getLocation())));
+        final var conditionals = feature.getConditional();
+        if (conditionals != null) {
+            for (var conditional : conditionals) {
+                final var bundles = conditional.getBundles();
+                if (bundles != null) {
+                    for (var bundleInfo : bundles) {
+                        result.add(toCoord(new URI(bundleInfo.getLocation()).toURL()));
                     }
                 }
             }
             // TODO Dependencies
         }
-        if (feature.getConfigfile() != null) {
-            result.addAll(configFilesToCoords(feature.getConfigfile()));
+        final var configFile = feature.getConfigfile();
+        if (configFile != null) {
+            result.addAll(configFilesToCoords(configFile));
         }
         LOG.trace("featureToCoords({}) returns {}", feature.getName(), result);
         return result;
@@ -168,12 +179,14 @@ public final class FeatureUtil {
      *
      * @param configfiles The configuration files.
      * @return The corresponding coordinates.
-     * @throws MalformedURLException if a URL is malformed.
+     * @throws MalformedURLException if a URL cannot be used
+     * @throws URISyntaxException if a URL is malformed
      */
-    public static Set<String> configFilesToCoords(final List<ConfigFile> configfiles) throws MalformedURLException {
-        Set<String> result = new LinkedHashSet<>();
-        for (ConfigFile configFile : configfiles) {
-            result.add(toCoord(new URL(configFile.getLocation())));
+    public static Set<String> configFilesToCoords(final List<ConfigFile> configfiles)
+            throws MalformedURLException, URISyntaxException {
+        final var result = new LinkedHashSet<String>();
+        for (var configFile : configfiles) {
+            result.add(toCoord(new URI(configFile.getLocation()).toURL()));
         }
         LOG.trace("configFilesToCoords({}) returns {}", configfiles, result);
         return result;
@@ -184,14 +197,16 @@ public final class FeatureUtil {
      *
      * @param bundles The bundles.
      * @return The corresponding coordinates.
-     * @throws MalformedURLException if a URL is malformed.
+     * @throws MalformedURLException if a URL cannot be used
+     * @throws URISyntaxException if a URL is malformed
      */
-    public static Set<String> bundlesToCoords(final List<Bundle> bundles) throws MalformedURLException {
-        Set<String> result = new LinkedHashSet<>();
-        for (Bundle bundle : bundles) {
+    public static Set<String> bundlesToCoords(final List<Bundle> bundles)
+            throws MalformedURLException, URISyntaxException {
+        final var result = new LinkedHashSet<String>();
+        for (var bundle : bundles) {
             try {
-                result.add(toCoord(new URL(bundle.getLocation())));
-            } catch (MalformedURLException e) {
+                result.add(toCoord(new URI(bundle.getLocation()).toURL()));
+            } catch (MalformedURLException | URISyntaxException e) {
                 LOG.error("Invalid URL {}", bundle.getLocation(), e);
                 throw e;
             }
@@ -208,19 +223,21 @@ public final class FeatureUtil {
      * @throws MojoExecutionException if an error occurs during processing.
      */
     public static Set<String> featuresToCoords(final Features features) throws MojoExecutionException {
-        Set<String> result = new LinkedHashSet<>();
+        final var result = new LinkedHashSet<String>();
         if (features.getRepository() != null) {
             try {
                 result.addAll(featuresRepositoryToCoords(features));
-            } catch (MalformedURLException e) {
+            } catch (MalformedURLException | URISyntaxException e) {
                 throw new MojoExecutionException("Feature " + features.getName() + " has an invalid repository URL", e);
             }
         }
-        if (features.getFeature() != null) {
-            for (Feature feature : features.getFeature()) {
+
+        final var featureList = features.getFeature();
+        if (featureList != null) {
+            for (var feature : featureList) {
                 try {
                     result.addAll(featureToCoords(feature));
-                } catch (MalformedURLException e) {
+                } catch (MalformedURLException | URISyntaxException e) {
                     throw new MojoExecutionException("Feature " + feature.getName() + " in " + features.getName()
                             + " contains an invalid or missing URL", e);
                 }
@@ -301,8 +318,7 @@ public final class FeatureUtil {
      * @throws FileNotFoundException if a file is missing.
      */
     public Features readFeature(final String coords) throws IOException {
-        Artifact artifact = aetherUtil.resolveArtifact(coords);
-        Features result = readFeature(artifact);
+        final var result = readFeature(aetherUtil.resolveArtifact(coords));
         LOG.trace("readFeature({}) returns {} after resolving first", coords, result.getName());
         return result;
     }
@@ -313,17 +329,18 @@ public final class FeatureUtil {
      * @param features The starting features.
      * @param existingCoords The artifact coordinates which have already been unmarshalled.
      * @return The features.
-     * @throws MalformedURLException if a URL is malformed.
+     * @throws MalformedURLException if a URL cannot be used
+     * @throws URISyntaxException if a URL is malformed
      * @throws IOException if a file cannot be read
      * @throws FileNotFoundException if a file is missing.
      */
     public Set<Features> findAllFeaturesRecursively(final Features features, final Set<String> existingCoords)
-            throws MalformedURLException, IOException {
+            throws MalformedURLException, IOException, URISyntaxException {
         LOG.debug("findAllFeaturesRecursively({}) starts", features.getName());
         LOG.trace("findAllFeaturesRecursively knows about these coords: {}", existingCoords);
-        Set<Features> result = new LinkedHashSet<>();
-        Set<String> coords = FeatureUtil.featuresRepositoryToCoords(features);
-        for (String coord : coords) {
+        final var result = new LinkedHashSet<Features>();
+        final var coords = FeatureUtil.featuresRepositoryToCoords(features);
+        for (var coord : coords) {
             if (!existingCoords.contains(coord)) {
                 LOG.trace("findAllFeaturesRecursively() going to add {}", coord);
                 existingCoords.add(coord);
@@ -344,14 +361,15 @@ public final class FeatureUtil {
      * @param features The starting features.
      * @param existingCoords The artifact coordinates which have already been unmarshalled.
      * @return The features.
-     * @throws MalformedURLException if a URL is malformed.
+     * @throws MalformedURLException if a URL cannot be used
+     * @throws URISyntaxException if a URL is malformed
      * @throws IOException if a file cannot be read
      * @throws FileNotFoundException if a file is missing.
      */
     public Set<Features> findAllFeaturesRecursively(final Set<Features> features, final Set<String> existingCoords)
-            throws MalformedURLException, IOException {
-        Set<Features> result = new LinkedHashSet<>();
-        for (Features feature : features) {
+            throws MalformedURLException, IOException, URISyntaxException {
+        final var result = new LinkedHashSet<Features>();
+        for (var feature : features) {
             result.addAll(findAllFeaturesRecursively(feature, existingCoords));
         }
         return result;
@@ -362,12 +380,13 @@ public final class FeatureUtil {
      *
      * @param features The starting features.
      * @return The features.
-     * @throws MalformedURLException if a URL is malformed.
+     * @throws MalformedURLException if a URL cannot be used
+     * @throws URISyntaxException if a URL is malformed
      * @throws IOException if a file cannot be read
      * @throws FileNotFoundException if a file is missing.
      */
     public Set<Features> findAllFeaturesRecursively(final Set<Features> features)
-            throws MalformedURLException, IOException {
+            throws MalformedURLException, IOException, URISyntaxException {
         return findAllFeaturesRecursively(features, new LinkedHashSet<>());
     }
 
